<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17dip"
        android:textColor="#FFFFFF"
        android:text="@string/sg_track" />


    <Spinner
        android:id="@+id/setgm_trackSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17dip"
        android:textColor="#FFFFFF"
        android:text="@string/sg_gmType" />

    <Spinner
        android:id="@+id/setgm_gmTpSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/sg_prompt" />

    <CheckBox
        android:id="@+id/setgm_EnableQue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17dip"
        android:textColor="#FFFFFF"
        android:text="@string/useQuestion" />

    <Button
        android:id="@+id/setgm_startbtn"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_bg_normal"
        android:text="@string/sg_StartBtn" />

</LinearLayout>