<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_playbtn" />

    <Button
        android:id="@+id/main_mutliplaybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_mutliplaybtn" />

    <Button
        android:id="@+id/main_editorbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_editorbtn" />

</LinearLayout>