<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_pName"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <EditText
            android:id="@+id/poied_nametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_lat"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <TextView
            android:id="@+id/poied_lattext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="			"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_lon"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <TextView
            android:id="@+id/poied_lontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="			"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_ord"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <EditText
            android:id="@+id/poied_ordtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/poied_eque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_que"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <EditText
            android:id="@+id/poied_quetext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edptn_ans"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dip" />

        <EditText
            android:id="@+id/poied_anstext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/poied_savebtn"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_bg_normal"
        android:text="@string/edtra_savebtn" />

</LinearLayout>