<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dip"
        android:text="@string/sg_gmId" />

    <EditText
        android:id="@+id/mgDial_gameidtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusable="false"
        android:inputType="number" />

    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dip"
        android:text="@string/multigameDialog_playlist" />

    <ListView
        android:id="@+id/mgDial_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingBottom="5dp" >
    </ListView>

    <Button
        android:id="@+id/mgDial_startbtn"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/button_bg_selector"
        android:textStyle="bold"
        android:textColor="#FFFFFF"     
        android:text="@string/multigameDialog_startbtn" />

</LinearLayout>