<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/ftrs_traspin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sums_playcnt"
            android:textSize="17dip"
            android:textColor="#AAAAAA"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ftrs_plcnt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textStyle="bold" 
            android:textSize="22dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_sumtime"
                android:textSize="17dip"
                android:textColor="#AAAAAA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_smtime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_sumlen"
                android:textSize="17dip"
                android:textColor="#AAAAAA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_sulen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_besttime"
                android:textSize="17dip"
                android:textColor="#AAAAAA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_betime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_bestlen"
                android:textSize="17dip"
                android:textColor="#AAAAAA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_belen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_avgtime"
                android:textSize="17dip"
                android:textColor="#AAAAAA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_avtime"
                android:layout_width= "fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sums_avglen"
                android:textColor="#AAAAAA"
                android:textSize="17dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ftrs_avlen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" 
                android:textSize="22dip" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>